# celery-slack

./: .gitignore  .travis.yml  HISTORY.rst  LICENSE.txt  Pipfile  README.md  README.rst  deploy.sh  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
celery_slack/: __init__.py  __version__.py  _version.py  attachments.py  callbacks.py  decorators.py  exceptions.py  ignore_exceptions.py  slack.py  slackify.py
docs/: Makefile  conf.py  index.rst  make.bat  notes.rst  requirements.txt  slack.rst  usage.rst
tests/: secret_template.py
tests/cassettes/: post_to_slack_200_real_attach.json  post_to_slack_200_real_attach.yaml  post_to_slack_200_real_none.json  post_to_slack_200_real_none.yaml  post_to_slack_404_fake_attach.json  post_to_slack_404_fake_attach.yaml  post_to_slack_404_fake_none.json  post_to_slack_404_fake_none.yaml  post_warning_to_slack_attach.json  post_warning_to_slack_attach.yaml  post_warning_to_slack_none.json  post_warning_to_slack_none.yaml
tests/celery/: __init__.py  celery.py  schedule.py  tasks.py
tests/celeryapp/: __init__.py  celeryapp.py  config.py  schedule.py  tasks.py
tests/unit/: common.py  conftest.py  test_attachments.py  test_callbacks.py  test_slack.py  test_slackify.py
