[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the root of the project
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "celery_slack"
version = "0.4.1"
description = "A Slack extension for Celery."
authors = ["Christopher Flynn <crf204@gmail.com>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/crflynn/celery-slack"
homepage = "https://github.com/crflynn/celery-slack"
packages = [
    { include = "celery_slack" }
]
include = ["HISTORY.rst"]
keywords = ["celery", "slack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring"
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
requests = "^2.22"
ephem = "^3.7"
celery = ">=3.1,<5.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
pytest-xdist = "^1.29"
twine = "^1.13"
sphinx = "^1.8"
sphinx-autobuild = "^0.7.1"
sphinx-rtd-theme = "^0.4.3"
vcrpy = "^2.0"
responses = "^0.10.6"
black = {version = "^18.3-alpha.0",allows-prereleases = true,python = "^3.7" }
redis = "^3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
